Fix alignment in home feeds

--- a/app/assets/stylesheets/views/home.css.scss
+++ b/app/assets/stylesheets/views/home.css.scss
@@ -142,6 +142,12 @@ html.home {
         }
       }
 
+      .content,
+      .info {
+        padding-left: 16px;
+        padding-right: 16px;
+      }
+
       @include breakpoint(md) {
         position: relative;
         margin-left: 10em;
@@ -160,7 +166,7 @@ html.home {
 
         h4,
         > footer {
-          padding: 0 16px;
+          padding: 0 (16px - 2px);
         }
       }
 
